<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">IPCamera</string>
    <string-array name="pref_resolution_list_titles">
        <item>1080P</item>
        <item>720P</item>
    </string-array>
    <string-array name="pref_resolution_list_values">
        <item>1080</item>
        <item>720</item>
    </string-array>

    <string-array name="pref_play_resolution_list_titles">
        <item>1080P</item>
        <item>清晰</item>
        <item>流畅</item>
    </string-array>
    <string-array name="pref_play_resolution_list_values">
        <item>1080</item>
        <item>720</item>
        <item>480</item>
    </string-array>

    <string-array name="pref_record_time_list_titles">
        <item>1分钟</item>
        <item>2分钟</item>
    </string-array>
    <string-array name="pref_record_time_list_values">
        <item>60</item>
        <item>120</item>
    </string-array>


    <string-array name="pref_exposure_list_titles">
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>

    </string-array>
    <string-array name="pref_exposure_list_values">
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>

    </string-array>

    <string-array name="pref_white_balance_list_titles">
        <item>自动</item>
        <item>晴天</item>
        <item>阴天</item>
        <item>白炽光</item>
        <item>荧光</item>
    </string-array>
    <string-array name="pref_white_balance_list_values">
        <item>Auto</item>
        <item>Daylight</item>
        <item>Cloudy</item>
        <item>Incandescent</item>
        <item>Fluorescent</item>
    </string-array>

    <string-array name="pref_contrast_list_titles">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="pref_contrast_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="pref_3dnr_list_titles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_3dnr_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_move_list_titles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="pref_move_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="pref_odt_list_titles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="pref_odt_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="format_summary">格式化后SD卡上的数据将无法恢复</string>
    <string name="delete_summary">删除设备后将无法控制</string>

    <!-- update -->
    <string name="txt_update">"版本升级"</string>
    <string name="txt_update_start">"开始升级"</string>
    <string name="update_firmware_check">"校验固件"</string>
    <string name="update_firmware_upload">"上传固件"</string>
    <string name="update_firmware_update">"固件升级"</string>
    <string name="update_success">"请等待设备升级完成"</string>
    <string name="update_failed">"升级失败"</string>
    <string name="update_firmware_unfound">"未找到固件"</string>
    <string name="update_firmware_unupload">"无法上传固件"</string>
    <string name="update_failed_upload">"固件上传失败"</string>
    <string name="update_send_firmware">"重新发送固件到设备"</string>
    <string name="update_firmware_path">"请选择设备的固件存储位置"</string>
    <string name="update_warn_ipc">"请确保ipc的sd卡根目录有名为"<xliff:g id="firmware">%s</xliff:g>"的固件"</string>
    <string name="update_warn_phone">"请确保手机存储根目录下有名为"<xliff:g id="firmware">%s</xliff:g>"的固件"</string>
    <string name="error_uid">"未找到uid"</string>
    <string name="sdcard">"SD卡"</string>
    <string name="storage">"内部存储"</string>
    <string name="unconnect">"无法连上设备"</string>
    <string name="device_view_status">连接失败,请重试</string>
    <string name="device_view_retry">重试</string>
    <string name="device_view_setting">设置</string>
    <string name="tab_image_txt">图像</string>
    <string name="tab_device_txt">设备</string>
    <string name="tab_about_txt">关于</string>

    <string name="crete_file_error">"无法创建文件"</string>
    <string name="txt_record">"录像"</string>
    <string name="txt_recording">"录像中..."</string>
    <string name="record_init_failed">"录像初始化失败"</string>
    <string name="take_record_failed">"录像时间过短,未接收到码流"</string>

    <string name="no_device_prompt">"还没有添加过设备，看不到设备信息！"</string>
    <string name="scaning_device">"正在搜索设备..."</string>
    <string name="scaned_devices">"扫描到%d个设备"</string>
    <string name="scaned_no_device">"未扫描到设备"</string>
    <string name="prompt_title">"提示"</string>
    <string name="know_title">"知道了"</string>

    <string name="scaning_file">"搜索文件..."</string>
    <string name="del_file_failed">"无法删除该文件"</string>
    <string name="not_video_app">"未找到视频播放应用"</string>
    <string name="warn_del_file">"删除该文件?"</string>
    <string name="deling_file">"删除文件..."</string>

    <string name="txt_cancel">"取消"</string>
    <string name="confirm">"确定"</string>
    <string name="format">"格式化"</string>
    <string name="formating">"格式化..."</string>
    <string name="format_failed">"格式化失败"</string>
    <string name="format_success">"格式化成功"</string>
    <string name="sdcard_error">"IPC的sd卡无法初始化,请格式化"</string>

    <string name="take_pic_failed">"拍照失败"</string>
    <string name="not_png_app">"未找到图片查看应用"</string>

    <string name="txt_all">"全部"</string>
    <string name="txt_all_check">"全部√"</string>
    <string name="txt_image">"图片"</string>
    <string name="txt_image_check">"图片√"</string>
    <string name="txt_video">"录像"</string>
    <string name="txt_video_check">"录像√"</string>
    <string name="txt_md">"警报"</string>
    <string name="txt_md_check">"警报√"</string>

    <string name="txt_config">"设置"</string>
    <string name="txt_bright">"亮度"</string>
    <string name="txt_play_volume">"声音"</string>
    <string name="txt_contrast">"对比度"</string>
    <string name="txt_saturation">"饱和度"</string>
    <string name="txt_sharpness">"锐度"</string>
    <string name="txt_close">"关闭"</string>
    <string name="txt_play_bright_failed">"设置亮度失败"</string>
    <string name="txt_play_volume_failed">"设置声音失败"</string>
    <string name="txt_play_contrast_failed">"设置对比度失败"</string>
    <string name="txt_play_saturation_failed">"设置饱和度失败"</string>
    <string name="txt_play_sharpness_failed">"设置锐度失败"</string>
    <string name="txt_3dnr_level">"3DNR等级"</string>
    <string name="txt_move_sensitivity">"移动侦测灵敏度"</string>
    <string name="txt_getting_info">"正在获取数据..."</string>
    <string name="txt_get_info_failed">"获取数据失败"</string>
    <string name="txt_odt">"人形检测"</string>
    <string name="txt_odt_warn">"是否检测人形才发生移动报警"</string>
    <string name="txt_odt_level">"人形检测灵敏度"</string>
    <string name="txt_set_resolution_failed">"由于网络问题，切换失败"</string>
    <string name="device_list_fragment_connet_error">无法连接到远程设备</string>

    <string name="video_setting_activity_reboot_title">设备重启后请重新连接</string>
    <string name="pref_setting_device_reboot">重启设备</string>
    <string name="pref_setting_device_recovery">"恢复出厂设置"</string>
    <string name="video_setting_activity_recovery_title">"恢复出厂设置后请重新连接"</string>
    <string name="fragment_device_menu_scan">扫描</string>
    <string name="fragment_device_menu_setwifi">配网</string>
    <string name="fragment_device_menu_reflush">刷新</string>
    <string name="parameter_error">"参数异常"</string>
    <string name="pref_encoder_width_height">width_height</string>
    <string name="txt_nosdcard">"无sd卡"</string>
    <string name="txt_to">"至"</string>
    <string name="txt_empty">"无数据"</string>
    <string name="network_failed">"网络连接失败"</string>
    <string name="jump_record_list">"点击跳转sd卡录像"</string>
    <string name="sending_msg">"发送请求..."</string>
    <string name="downloading_file">"下载文件..."</string>
    <string name="download_failed">"下载失败"</string>
    <string name="play_remote">"远程播放"</string>
    <string name="play_area_net">"局域网播放"</string>
    <string name="play_local">"播放已下载文件"</string>
    <string name="del_download">"删除下载文件"</string>
    <string name="storage_error">"存储异常"</string>
    <string name="mp4_play_unopen">"打开远程文件失败"</string>
    <string name="mp4_play_error">"播放失败"</string>
    <string name="mp4_prepare_error">"启动播放器失败"</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">账号必须大于3个字符</string>
    <string name="error_invalid_password">密码必须大于5个字符</string>
    <string name="error_invalid_password_equal">密码输入不一致</string>
    <string name="error_incorrect_password">用户或密码验证失败</string>
    <string name="error_device_exceed_max_session">设备超过最大会话</string>
    <string name="error_device_offline">设备不在线</string>
    <string name="error_can_not_find_device">找不到设备</string>
    <string name="error_field_required">输入不能为空</string>


    <string name="main_btn_camera">相机</string>
    <string name="main_btn_photo">相册</string>
    <string name="main_btn_live">直播</string>
    <string name="main_btn_find">发现</string>
    <string name="main_btn_self">我</string>
    <string name="title_back">返回</string>

    <string name="gallery_title_photo">照片</string>
    <string name="gallery_title_gallery">相册</string>

    <string name="main_tab_title">TCL投影仪摄像头</string>

    <string name="dialog_devicelist_title">选择设备</string>
    <string name="dialog_devicelist_tips">请选择你想绑定的设备类型</string>
    <string name="activity_camera_tips">拖动改变镜头角度</string>

    <string name="dialog_login_wechat">微信登录</string>
    <string name="dialog_login_phone">手机登录</string>

    <string name="dialog_login_register">注册帐号</string>

    <string name="dialog_register_title">新用户注册</string>
    <string name="dialog_register_skip">跳过</string>
    <string name="dialog_register_phonenum">请输入您的手机号码</string>
    <string name="dialog_register_verification">短信验证码</string>

    <string name="dialog_register_send">发送验证码</string>
    <string name="dialog_register_pw">请输入密码</string>
    <string name="dialog_register_report">注册</string>

    <string name="dialog_phonelogin_login">登录</string>
    <string name="dialog_phonelogin_title">手机登陆</string>

    <string name="admin_logout">退出当前账号</string>
    <string name="title_activity_setting">SettingActivity</string>
</resources>
