<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:descendantFocusability="beforeDescendants"
	android:orientation="vertical"
	android:background="#f4f4f4">

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="@dimen/y45"
		android:background="#ffffff">
		<LinearLayout
			android:id="@+id/btn_title_return"
			android:layout_width="@dimen/x90"
			android:layout_height="fill_parent"
			android:orientation="horizontal"
			android:clickable="true"
			android:focusable="true"
			android:focusableInTouchMode="false"
			android:descendantFocusability="blocksDescendants">
			<ImageButton
				android:layout_width="@dimen/x20"
				android:layout_height="@dimen/y14"
				android:layout_gravity="center_vertical"
				android:layout_marginLeft="@dimen/x21"
				android:background="@drawable/selector_title_return"
				android:clickable="false"
				android:focusable="false"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical"
				android:layout_gravity="center"
				android:visibility="invisible"
				android:textSize="15sp"
				android:textColor="#000000"
				android:text="@string/title_back"/>
		</LinearLayout>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:layout_gravity="center"
			android:textSize="21sp"
			android:textColor="#2e2e2e"
			android:text="@string/dialog_phonelogin_title"/>

	</RelativeLayout>


	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="@dimen/y35"
		android:orientation="horizontal"
		android:layout_marginTop="@dimen/y49"
		android:background="#ffffff">
		<EditText
			android:id="@+id/txt_phonelogin_phonenum"
			android:layout_width="@dimen/x270"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="@dimen/x16"
			android:textSize="16sp"
			android:textColor="#000000"
			android:inputType="phone"
			android:textColorHint="#cfd0d1"
			android:maxLength="11"
			android:hint="@string/dialog_register_phonenum"
			android:background="@null"/>
		<TextView
			android:id="@+id/btn_register_clear"
			android:layout_width="@dimen/x17"
			android:layout_height="@dimen/y12"
			android:layout_gravity="center_vertical"
			android:background="@drawable/icon_close"/>
	</LinearLayout>
	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="@dimen/y1"
		android:layout_gravity="center_horizontal"
		android:background="@drawable/line"/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="@dimen/y35"
		android:orientation="horizontal"
		android:background="#ffffff">
		<EditText
			android:id="@+id/txt_phonelogin_pw"
			android:layout_width="@dimen/x266"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="@dimen/x16"
			android:textSize="16sp"
			android:textColor="#000000"
			android:textColorHint="#cfd0d1"
			android:maxLength="16"
			android:hint="@string/dialog_register_pw"
			android:background="@null"/>
		<TextView
			android:id="@+id/btn_phonelogin_visible"
			android:layout_width="@dimen/x23"
			android:layout_height="@dimen/y16"
			android:layout_gravity="center_vertical"
			android:background="@drawable/icon_visible"/>
	</LinearLayout>
	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="@dimen/y1"
		android:layout_gravity="center_horizontal"
		android:background="@drawable/line"/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="@dimen/y35"
		android:orientation="horizontal"
		android:background="#ffffff">
		<EditText
			android:id="@+id/txt_phonelogin_verificationcode"
			android:layout_width="@dimen/x190"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="@dimen/x16"
			android:textSize="16sp"
			android:textColor="#000000"
			android:inputType="number"
			android:textColorHint="#cfd0d1"
			android:maxLength="6"
			android:hint="@string/dialog_register_verification"
			android:background="@null"/>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="fill_parent"
			android:background="#ffffff">
			<TextView
				android:id="@+id/txt_register_verificationtips"
				android:layout_width="@dimen/x85"
				android:layout_height="@dimen/y19"
				android:layout_centerInParent="true"
				android:gravity="center"
				android:textColor="#000000"
				android:textSize="14sp"
				android:text="@string/dialog_register_send"
				android:background="#b8b8b8"/>
		</RelativeLayout>
	</LinearLayout>
	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="@dimen/y1"
		android:layout_gravity="center_horizontal"
		android:background="@drawable/line"/>
	<TextView
		android:id="@+id/btn_phonelogin_report"
		android:layout_width="@dimen/x252"
		android:layout_height="@dimen/y25"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/y51"
		android:focusable="true"
		android:clickable="true"
		android:gravity="center"
		android:text="@string/dialog_phonelogin_login"
		android:background="@drawable/button_phone_foucs"/>
</LinearLayout>