<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txt_update">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/txt_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dip"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/layout_send_firmware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update_send_firmware" />

                <Switch
                    android:id="@+id/sw_send_firmware"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/update_firmware_path" />

            <RadioGroup
                android:id="@+id/rg_firmware_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_sdcard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sdcard" />

                <RadioButton
                    android:id="@+id/rb_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage" />
            </RadioGroup>

            <TextView
                android:id="@+id/txt_firmware_warn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@android:color/holo_blue_light" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txt_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/txt_update_start"
        android:textColor="@drawable/txt_selector"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/layout_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/txt_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:textColor="@drawable/txt_selector" />
    </LinearLayout>

</RelativeLayout>