<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:orientation="vertical"
    android:background="#f4f4f4">

    <RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/y45"
	    android:background="#ffffff">
		<LinearLayout
		    android:id="@+id/btn_title_return"
			android:layout_width="@dimen/x90"
			android:layout_height="fill_parent"
			android:orientation="horizontal"
			android:clickable="true"
			android:focusable="true"
	    	android:focusableInTouchMode="false"
	    	android:descendantFocusability="blocksDescendants">
			<ImageButton
			    android:layout_width="@dimen/x20"
			    android:layout_height="@dimen/y14"
			    android:layout_gravity="center_vertical"
			    android:layout_marginLeft="@dimen/x21"
			    android:background="@drawable/selector_title_return"
			    android:clickable="false"
			    android:focusable="false"
			    />
			<TextView 
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:gravity="center_vertical"
			    android:layout_gravity="center"
				android:visibility="invisible"
			    android:textSize="15sp"
			    android:textColor="#000000"
			    android:text="@string/title_back"/>
		</LinearLayout>
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="center"
		    android:layout_gravity="center"
		    android:textSize="21sp"
		    android:textColor="#2e2e2e"
		    android:text="@string/dialog_devicelist_title"/>

	</RelativeLayout>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="19sp"
		android:textColor="#4f4f4f"
		android:layout_marginTop="@dimen/y32"
		android:text="@string/dialog_devicelist_tips"/>

	<ListView
		android:id="@+id/list_dialog_typelist"
		android:layout_width="@dimen/x240"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/y32"
		android:layout_gravity="center_horizontal"
		android:clickable="true"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:cacheColorHint="#00000000"
		android:divider="@drawable/line"
		android:dividerHeight="@dimen/y1"
		/>
	<ImageView
		android:layout_width="@dimen/x240"
		android:layout_height="@dimen/y1"
		android:layout_gravity="center_horizontal"
		android:background="@drawable/line"/>
</LinearLayout>