<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ly_cloud_new"
	android:layout_width="@dimen/x320"
	android:layout_height="@dimen/y400"
    android:background="@mipmap/black_bottom_3">
		<LinearLayout
			android:layout_width="@dimen/x276"
			android:layout_height="@dimen/y110"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
            android:orientation="vertical"
			android:background="@drawable/popup">

            <RelativeLayout
				android:id="@+id/btn_login_wechat"
                android:layout_width="@dimen/x220"
                android:layout_height="@dimen/y25"
                android:layout_marginTop="@dimen/y12"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_wechat_normal"
				android:clickable="true"
				android:focusable="true">
				<TextView
					android:id="@+id/txt_wechat"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:textSize="17sp"
					android:textColor="#ffffff"
					android:text="@string/dialog_login_wechat"/>
				<ImageView
					android:layout_toLeftOf="@id/txt_wechat"
					android:layout_width="@dimen/x21"
					android:layout_height="@dimen/y15"
					android:layout_marginRight="@dimen/x5"
					android:background="@drawable/wechat"
					android:layout_centerVertical="true"
					/>
            </RelativeLayout>

            <RelativeLayout
				android:id="@+id/btn_login_phone"
                android:layout_width="@dimen/x220"
                android:layout_height="@dimen/y25"
                android:layout_marginTop="@dimen/y12"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_phone_normal"
				android:clickable="true"
				android:focusable="true">
				<TextView
					android:id="@+id/txt_phone"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:textSize="17sp"
					android:textColor="#ffffff"
					android:text="@string/dialog_login_phone"/>
				<ImageView
					android:layout_toLeftOf="@id/txt_phone"
					android:layout_width="@dimen/x21"
					android:layout_height="@dimen/y15"
					android:layout_marginRight="@dimen/x5"
					android:background="@drawable/phone"
					android:layout_centerVertical="true"
					/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="@dimen/x220"
                android:layout_height="@dimen/y25"
                android:layout_marginTop="@dimen/y12"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
				<TextView
					android:id="@+id/txt_login_register"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:focusable="true"
					android:clickable="true"
					android:textSize="15sp"
					android:textColor="#000000"
					android:text="@string/dialog_login_register"/>
            </LinearLayout>

		</LinearLayout>
</RelativeLayout>